--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,38 @@
+# CMake stuff
+CMakeCache.txt
+CMakeFiles
+Makefile
+cmake_install.cmake
+install_manifest.txt
+
+# Eclipse stuff
+.cproject
+.project
+
+# Output dir
+bin/
+build/
+lib/
+
+# Data files
+data/
+
+# Temporary objects/files
+*~
+
 # Compiled Object files
 *.slo
 *.lo
 *.o
-*.obj
 
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
 
 # Compiled Static libraries
 *.lai
 *.la
 *.a
-*.lib
 
 # Executables
 *.exe
